--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,9 @@ jobs:
         with:
           node-version: 15.3.0
 
+      - name: Install Webpack
+        run: npm install --save-dev webpack-cli
+
       - name: Update Addon
         if: matrix.os != 'windows-latest'
         run: ./update.sh ${{secrets.TOKEN}} ${{matrix.os}}
@@ -41,11 +44,8 @@ jobs:
         if: matrix.os == 'windows-latest'
         shell: cmd
         run: |
-          more update.log
+          type update.log
           dir dist\lib
-
-      - name: Install Webpack
-        run: npm install --save-dev webpack-cli
 
       - name: Update Deps
         run: npm run build:deps
