--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,9 @@
 name: Release
 
-on: push
-#on: 
-#  push:
-#    tags:        
-#      - v*
+on: 
+  push:
+    tags:        
+      - v*
 
 jobs:
   release:
@@ -35,15 +34,6 @@ jobs:
       - name: Update Addon
         shell: bash  
         run: ./update.sh ${{secrets.TOKEN}} ${{matrix.os}}
-
-      - name: Update Result
-        if: matrix.os == 'windows-latest'
-        shell: cmd
-        run: |
-          type update.log
-          dir
-          dir dist
-          dir dist\lib
 
       - name: Update Deps
         run: npm run build:deps
