--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"electron-builder": "^22.9.1",
 		"electron-notarize": "^0.2.1",
 		"electron-packager": "^15.2.0",
+		"electron-rebuild": "^2.3.4",
 		"git-revision-webpack-plugin": "^3.0.6",
 		"ifdef-loader": "^2.1.5",
 		"json-loader": "^0.5.7",
