--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "anytype2",
-	"version": "0.17.14-alpha",
+	"version": "0.17.17-alpha",
 	"description": "Anytype",
 	"main": "electron.js",
 	"scripts": {
@@ -10,14 +10,14 @@
 		"start:electron-wait-webpack": "cross-env wait-for-localhost $SERVER_PORT && ./node_modules/.bin/electron .",
 		"start:dev": "npm-run-all --parallel start:watch start:electron-wait-webpack",
 		"start:dev-addon": "ANYTYPE_USE_ADDON=1 npm-run-all start:dev",
-		"build": "webpack --mode=production --env.NODE_ENV=production --config webpack.config.js",
+		"build": "webpack --mode=production --env.NODE_ENV=production  -p --config webpack.config.js",
 		"build:deps": "webpack --config webpack.node.config.js --display-modules --display-cached | grep \"node_modules\" | sed 's/.*\\(node_modules\\/[^\\/]*\\).*/\\1/' | uniq | node save-node-deps.js",
-		"dist:mac": "webpack --mode=production --env.NODE_ENV=production && DATE=`date '+%Y-%m-%d_%H_%M'` GIT_COMMIT=`git rev-parse --short HEAD` electron-builder --macos",
-		"dist:win": "webpack --mode=production --env.NODE_ENV=production && DATE=`date '+%Y-%m-%d_%H_%M'` GIT_COMMIT=`git rev-parse --short HEAD` electron-builder --windows",
-		"dist:linux": "webpack --mode=production --env.NODE_ENV=production && DATE=`date '+%Y-%m-%d_%H_%M'` GIT_COMMIT=`git rev-parse --short HEAD` electron-builder --linux",
-		"publish:mac": "webpack --mode=production --env.NODE_ENV=production && DATE=`date '+%Y-%m-%d_%H_%M'` GIT_COMMIT=`git rev-parse --short HEAD` BUILD_NUMBER=`git rev-parse --short HEAD` electron-builder --macos --publish  always",
-		"publish:linux": "webpack --mode=production --env.NODE_ENV=production && DATE=`date '+%Y-%m-%d_%H_%M'` GIT_COMMIT=`git rev-parse --short HEAD` BUILD_NUMBER=`git rev-parse --short HEAD` electron-builder --linux --publish  always",
-		"publish:win": "webpack --mode=production --env.NODE_ENV=production && DATE=`date '+%Y-%m-%d_%H_%M'` GIT_COMMIT=`git rev-parse --short HEAD` BUILD_NUMBER=`git rev-parse --short HEAD` electron-builder --windows --publish  always"
+		"dist:mac": "webpack --mode=production --env.NODE_ENV=production -p && DATE=`date '+%Y-%m-%d_%H_%M'` GIT_COMMIT=`git rev-parse --short HEAD` electron-builder --macos",
+		"dist:win": "webpack --mode=production --env.NODE_ENV=production -p && DATE=`date '+%Y-%m-%d_%H_%M'` GIT_COMMIT=`git rev-parse --short HEAD` electron-builder --windows",
+		"dist:linux": "webpack --mode=production --env.NODE_ENV=production -p && DATE=`date '+%Y-%m-%d_%H_%M'` GIT_COMMIT=`git rev-parse --short HEAD` electron-builder --linux",
+		"publish:mac": "webpack --mode=production --env.NODE_ENV=production -p && DATE=`date '+%Y-%m-%d_%H_%M'` GIT_COMMIT=`git rev-parse --short HEAD` BUILD_NUMBER=`git rev-parse --short HEAD` electron-builder --macos --publish  always",
+		"publish:linux": "webpack --mode=production --env.NODE_ENV=production -p && DATE=`date '+%Y-%m-%d_%H_%M'` GIT_COMMIT=`git rev-parse --short HEAD` BUILD_NUMBER=`git rev-parse --short HEAD` electron-builder --linux --publish  always",
+		"publish:win": "webpack --mode=production --env.NODE_ENV=production -p && DATE=`date '+%Y-%m-%d_%H_%M'` GIT_COMMIT=`git rev-parse --short HEAD` BUILD_NUMBER=`git rev-parse --short HEAD` electron-builder --windows --publish  always"
 	},
 	"repository": {
 		"type": "git",
@@ -33,47 +33,45 @@
 	},
 	"homepage": "https://anytype.io",
 	"devDependencies": {
-		"@babel/core": "^7.12.13",
+		"@babel/core": "^7.11.6",
 		"@types/history": "^4.7.8",
-		"@types/i18n": "^0.8.8",
+		"@types/i18n": "^0.8.7",
 		"@types/is": "0.0.21",
-		"@types/jquery": "^3.5.5",
-		"@types/lodash": "^4.14.168",
+		"@types/jquery": "^3.5.1",
+		"@types/lodash": "^4.14.165",
 		"@types/long": "^4.0.1",
 		"@types/mobx-devtools-mst": "^0.9.7",
-		"@types/node": "^12.19.15",
-		"@types/prismjs": "^1.16.2",
-		"@types/react": "^16.14.3",
+		"@types/node": "^12.19.4",
+		"@types/prismjs": "^1.16.1",
+		"@types/react": "^16.9.56",
 		"@types/react-beautiful-dnd": "^11.0.5",
 		"@types/react-dnd": "^3.0.2",
 		"@types/react-dnd-html5-backend": "^3.0.2",
-		"@types/react-dom": "^16.9.10",
+		"@types/react-dom": "^16.9.8",
 		"@types/react-router-dom": "^4.3.5",
 		"babel-loader": "^8.2.1",
 		"babel-preset-env": "^1.7.0",
-		"electron": "^11.2.2",
-		"electron-builder": "^22.9.1",
+		"electron": "^8.5.3",
+		"electron-builder": "^21.2.0",
 		"electron-notarize": "^0.2.1",
-		"electron-packager": "^15.2.0",
-		"electron-rebuild": "^2.3.4",
 		"git-revision-webpack-plugin": "^3.0.6",
 		"ifdef-loader": "^2.1.5",
 		"json-loader": "^0.5.7",
-		"sass-loader": "^10.1.1",
-		"style-loader": "^1.3.0",
+		"sass-loader": "^8.0.2",
+		"style-loader": "^1.2.1",
 		"ts-loader": "^6.2.2",
 		"tslint": "^5.20.1",
 		"tslint-react": "^4.2.0",
 		"uglifyjs-webpack-plugin": "^2.2.0",
 		"url-loader": "^2.3.0",
 		"wait-for-localhost-cli": "^1.1.0",
-		"webpack": "^4.46.0",
+		"webpack": "^4.44.2",
 		"webpack-cli": "^3.3.12",
-		"webpack-dev-server": "^3.11.2"
+		"webpack-dev-server": "^3.11.0"
 	},
 	"dependencies": {
-		"@sentry/browser": "^5.30.0",
-		"@types/bindings": "^1.5.0",
+		"@sentry/browser": "^5.27.4",
+		"@types/bindings": "^1.3.0",
 		"about-window": "^1.13.4",
 		"amplitude-js": "^5.11.0",
 		"array-move": "^2.2.2",
@@ -81,7 +79,6 @@
 		"bindings": "^1.5.0",
 		"blueimp-load-image": "^2.31.0",
 		"bytebuffer": "^5.0.1",
-		"chokidar": "^3.5.1",
 		"cross-env": "^7.0.2",
 		"css-loader": "^3.6.0",
 		"electron-devtools-installer": "^3.1.1",
@@ -96,49 +93,48 @@
 		"file-loader": "^4.3.0",
 		"file-type": "^12.4.2",
 		"findandreplacedomtext": "^0.4.6",
+		"flexsearch": "^0.6.32",
 		"fs": "0.0.1-security",
 		"get-input-selection": "^1.1.4",
 		"google-protobuf": "^3.14.0",
 		"grpc-web": "^1.2.1",
-		"highlight.js": "^10.5.0",
+		"highlight.js": "^10.2.1",
 		"history": "^4.10.1",
-		"http-parser-js": "^0.5.3",
 		"inputmask": "^5.0.5",
 		"install": "^0.13.0",
 		"is": "^3.3.0",
 		"jquery": "^3.5.1",
-		"keytar": "^7.3.0",
+		"keytar": "^7.0.0",
 		"lazy-val": "^1.0.4",
 		"linebyline": "^1.3.0",
 		"lodash": "^4.17.20",
-		"lowlight": "^1.18.0",
+		"lowlight": "^1.15.0",
 		"mem": "^6.1.1",
 		"mobx": "^5.15.7",
 		"mobx-decorators": "^6.0.1",
-		"mobx-devtools-mst": "^0.9.30",
+		"mobx-devtools-mst": "^0.9.26",
 		"mobx-logger": "^0.7.1",
 		"mobx-react": "^6.3.1",
-		"mobx-state-tree": "^3.17.3",
+		"mobx-state-tree": "^3.17.2",
 		"node-loader": "^1.0.2",
-		"node-sass": "^5.0.0",
-		"npm": "^6.14.11",
+		"node-sass": "^4.14.1",
+		"npm": "^6.14.8",
 		"npm-run-all": "^4.1.5",
 		"object-assign": "^4.1.1",
 		"os": "^0.1.1",
 		"portfinder-sync": "0.0.2",
-		"prismjs": "^1.23.0",
-		"protobufjs": "^6.10.2",
+		"prismjs": "^1.21.0",
+		"protobufjs": "^6.10.1",
 		"raf": "^3.4.1",
-		"react": "^16.14.0",
-		"react-addons-shallow-compare": "^15.6.3",
+		"react": "^16.13.1",
+		"react-addons-shallow-compare": "^15.6.2",
 		"react-beautiful-dnd": "^13.0.0",
-		"react-dom": "^16.14.0",
+		"react-dom": "^16.13.1",
 		"react-draggable-tags": "^1.0.2",
 		"react-hot-loader": "^4.13.0",
 		"react-router-dom": "^5.2.0",
 		"react-sortable-hoc": "^1.11.0",
-		"react-tag-input": "^6.5.2",
-		"react-virtualized": "^9.22.3",
+		"react-virtualized": "^9.22.2",
 		"read-chunk": "^3.2.0",
 		"readline": "^1.3.0",
 		"rehype": "^9.0.1",
@@ -149,7 +145,7 @@
 		"source-map-loader": "^0.2.4",
 		"sprintf-kit": "^2.0.0",
 		"typescript": "^3.9.7",
-		"uuid": "^8.3.2",
+		"uuid": "^8.3.0",
 		"webpack-bundle-analyzer": "^3.9.0",
 		"xhr2": "^0.2.0",
 		"xmlhttprequest": "^1.8.0",
