--- a/package.json
+++ b/package.json
@@ -184,6 +184,7 @@
 			"electron.js",
 			"electron/server.js",
 			"electron/util.js",
+			"electron/env.json",
 			"electron/icon*",
 			"electron/about.css",
 			"build",
@@ -197,6 +198,8 @@
 			"dist/anytypeHelper",
 			"dist/*.node",
 			"!node_modules/**/*",
+			"node_modules/google-protobuf",
+			"node_modules/grpc-web",
 			"node_modules/about-window",
 			"node_modules/async",
 			"node_modules/at-least-node",
@@ -222,9 +225,7 @@
 			"node_modules/fs-extra",
 			"node_modules/fs.realpath",
 			"node_modules/glob",
-			"node_modules/google-protobuf",
 			"node_modules/graceful-fs",
-			"node_modules/grpc-web",
 			"node_modules/has-flag",
 			"node_modules/imurmurhash",
 			"node_modules/inflight",
