remove release cleanup

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,9 +80,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{secrets.TOKEN}}
 
-      - name: Delete old releases
-        uses: dev-drprasad/delete-older-releases@v0.2.0
-        with:
-          keep_latest: 5
-        env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+#      - name: Delete old releases
+#        uses: dev-drprasad/delete-older-releases@v0.2.0
+#        with:
+#          keep_latest: 5
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.TOKEN }}
