--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
 		"lazy-val": "^1.0.4",
 		"linebyline": "^1.3.0",
 		"lodash": "^4.17.20",
+		"lodash.isequal": "^4.5.0",
 		"lowlight": "^1.15.0",
 		"mem": "^6.1.1",
 		"mobx": "^5.15.7",
@@ -202,7 +203,6 @@
 			"node_modules/grpc-web",
 			"node_modules/about-window",
 			"node_modules/async",
-			"node_modules/at-least-node",
 			"node_modules/balanced-match",
 			"node_modules/bindings",
 			"node_modules/brace-expansion",
@@ -236,6 +236,7 @@
 			"node_modules/lazy-val",
 			"node_modules/lockfile",
 			"node_modules/lodash",
+			"node_modules/lodash.escaperegexp",
 			"node_modules/lodash.isequal",
 			"node_modules/lru-cache",
 			"node_modules/mime-db",
