--- a/package.json
+++ b/package.json
@@ -178,7 +178,8 @@
 			"electron/icon*",
 			"build",
 			"dist/*.node",
-			"node_modules/keytar/build/Release/keytar.node"
+			"node_modules/keytar/build/Release/keytar.node",
+			"node_modules/lodash.isequal"
 		],
 		"extraResources": [],
 		"files": [
@@ -201,71 +202,278 @@
 			"!node_modules/**/*",
 			"node_modules/google-protobuf",
 			"node_modules/grpc-web",
-			"node_modules/about-window",
-			"node_modules/async",
-			"node_modules/balanced-match",
-			"node_modules/bindings",
-			"node_modules/brace-expansion",
-			"node_modules/builder-util-runtime",
-			"node_modules/concat-map",
-			"node_modules/debug",
-			"node_modules/electron",
-			"node_modules/electron-dl",
-			"node_modules/electron-is-dev",
-			"node_modules/electron-json-storage",
-			"node_modules/electron-log",
-			"node_modules/electron-updater",
-			"node_modules/electron-util",
-			"node_modules/electron-window-state",
-			"node_modules/ext-list",
-			"node_modules/ext-name",
-			"node_modules/file-type",
-			"node_modules/file-uri-to-path",
-			"node_modules/fs-extra",
-			"node_modules/fs.realpath",
-			"node_modules/glob",
-			"node_modules/graceful-fs",
-			"node_modules/has-flag",
-			"node_modules/imurmurhash",
-			"node_modules/inflight",
-			"node_modules/inherits",
-			"node_modules/is-plain-obj",
-			"node_modules/js-yaml",
-			"node_modules/jsonfile",
-			"node_modules/keytar",
-			"node_modules/lazy-val",
-			"node_modules/lockfile",
-			"node_modules/lodash",
-			"node_modules/lodash.escaperegexp",
-			"node_modules/lodash.isequal",
-			"node_modules/lru-cache",
-			"node_modules/mime-db",
-			"node_modules/minimatch",
-			"node_modules/mkdirp",
-			"node_modules/modify-filename",
-			"node_modules/ms",
-			"node_modules/new-github-issue-url",
-			"node_modules/once",
-			"node_modules/p-finally",
-			"node_modules/p-try",
-			"node_modules/path-exists",
-			"node_modules/path-is-absolute",
-			"node_modules/pify",
-			"node_modules/pupa",
-			"node_modules/read-chunk",
-			"node_modules/rimraf",
-			"node_modules/sax",
-			"node_modules/semver",
-			"node_modules/signal-exit",
-			"node_modules/sort-keys",
-			"node_modules/sort-keys-length",
-			"node_modules/supports-color",
-			"node_modules/universalify",
-			"node_modules/unused-filename",
-			"node_modules/with-open-file",
-			"node_modules/wrappy",
-			"node_modules/write-file-atomic",
-			"node_modules/yallist"
+			{
+				"from": "node_modules/lodash.isequal",
+				"to": "node_modules/lodash.isequal"
+			},
+			{
+				"from": "node_modules/lodash.escaperegexp",
+				"to": "node_modules/lodash.escaperegexp"
+			},
+			{
+				"from": "",
+				"to": ""
+			},
+			{
+				"from": "node_modules/about-window",
+				"to": "node_modules/about-window"
+			},
+			{
+				"from": "node_modules/async",
+				"to": "node_modules/async"
+			},
+			{
+				"from": "node_modules/balanced-match",
+				"to": "node_modules/balanced-match"
+			},
+			{
+				"from": "node_modules/bindings",
+				"to": "node_modules/bindings"
+			},
+			{
+				"from": "node_modules/brace-expansion",
+				"to": "node_modules/brace-expansion"
+			},
+			{
+				"from": "node_modules/builder-util-runtime",
+				"to": "node_modules/builder-util-runtime"
+			},
+			{
+				"from": "node_modules/concat-map",
+				"to": "node_modules/concat-map"
+			},
+			{
+				"from": "node_modules/debug",
+				"to": "node_modules/debug"
+			},
+			{
+				"from": "node_modules/electron",
+				"to": "node_modules/electron"
+			},
+			{
+				"from": "node_modules/electron-dl",
+				"to": "node_modules/electron-dl"
+			},
+			{
+				"from": "node_modules/electron-is-dev",
+				"to": "node_modules/electron-is-dev"
+			},
+			{
+				"from": "node_modules/electron-json-storage",
+				"to": "node_modules/electron-json-storage"
+			},
+			{
+				"from": "node_modules/electron-log",
+				"to": "node_modules/electron-log"
+			},
+			{
+				"from": "node_modules/electron-updater",
+				"to": "node_modules/electron-updater"
+			},
+			{
+				"from": "node_modules/electron-util",
+				"to": "node_modules/electron-util"
+			},
+			{
+				"from": "node_modules/electron-window-state",
+				"to": "node_modules/electron-window-state"
+			},
+			{
+				"from": "node_modules/ext-list",
+				"to": "node_modules/ext-list"
+			},
+			{
+				"from": "node_modules/ext-name",
+				"to": "node_modules/ext-name"
+			},
+			{
+				"from": "node_modules/file-type",
+				"to": "node_modules/file-type"
+			},
+			{
+				"from": "node_modules/file-uri-to-path",
+				"to": "node_modules/file-uri-to-path"
+			},
+			{
+				"from": "node_modules/fs-extra",
+				"to": "node_modules/fs-extra"
+			},
+			{
+				"from": "node_modules/fs.realpath",
+				"to": "node_modules/fs.realpath"
+			},
+			{
+				"from": "node_modules/glob",
+				"to": "node_modules/glob"
+			},
+			{
+				"from": "node_modules/graceful-fs",
+				"to": "node_modules/graceful-fs"
+			},
+			{
+				"from": "node_modules/has-flag",
+				"to": "node_modules/has-flag"
+			},
+			{
+				"from": "node_modules/imurmurhash",
+				"to": "node_modules/imurmurhash"
+			},
+			{
+				"from": "node_modules/inflight",
+				"to": "node_modules/inflight"
+			},
+			{
+				"from": "node_modules/inherits",
+				"to": "node_modules/inherits"
+			},
+			{
+				"from": "node_modules/is-plain-obj",
+				"to": "node_modules/is-plain-obj"
+			},
+			{
+				"from": "node_modules/js-yaml",
+				"to": "node_modules/js-yaml"
+			},
+			{
+				"from": "node_modules/jsonfile",
+				"to": "node_modules/jsonfile"
+			},
+			{
+				"from": "node_modules/keytar",
+				"to": "node_modules/keytar"
+			},
+			{
+				"from": "node_modules/lazy-val",
+				"to": "node_modules/lazy-val"
+			},
+			{
+				"from": "node_modules/lockfile",
+				"to": "node_modules/lockfile"
+			},
+			{
+				"from": "node_modules/lodash",
+				"to": "node_modules/lodash"
+			},
+			{
+				"from": "node_modules/lodash.escaperegexp",
+				"to": "node_modules/lodash.escaperegexp"
+			},
+			{
+				"from": "node_modules/lodash.isequal",
+				"to": "node_modules/lodash.isequal"
+			},
+			{
+				"from": "node_modules/lru-cache",
+				"to": "node_modules/lru-cache"
+			},
+			{
+				"from": "node_modules/mime-db",
+				"to": "node_modules/mime-db"
+			},
+			{
+				"from": "node_modules/minimatch",
+				"to": "node_modules/minimatch"
+			},
+			{
+				"from": "node_modules/mkdirp",
+				"to": "node_modules/mkdirp"
+			},
+			{
+				"from": "node_modules/modify-filename",
+				"to": "node_modules/modify-filename"
+			},
+			{
+				"from": "node_modules/ms",
+				"to": "node_modules/ms"
+			},
+			{
+				"from": "node_modules/new-github-issue-url",
+				"to": "node_modules/new-github-issue-url"
+			},
+			{
+				"from": "node_modules/once",
+				"to": "node_modules/once"
+			},
+			{
+				"from": "node_modules/p-finally",
+				"to": "node_modules/p-finally"
+			},
+			{
+				"from": "node_modules/p-try",
+				"to": "node_modules/p-try"
+			},
+			{
+				"from": "node_modules/path-exists",
+				"to": "node_modules/path-exists"
+			},
+			{
+				"from": "node_modules/path-is-absolute",
+				"to": "node_modules/path-is-absolute"
+			},
+			{
+				"from": "node_modules/pify",
+				"to": "node_modules/pify"
+			},
+			{
+				"from": "node_modules/pupa",
+				"to": "node_modules/pupa"
+			},
+			{
+				"from": "node_modules/read-chunk",
+				"to": "node_modules/read-chunk"
+			},
+			{
+				"from": "node_modules/rimraf",
+				"to": "node_modules/rimraf"
+			},
+			{
+				"from": "node_modules/sax",
+				"to": "node_modules/sax"
+			},
+			{
+				"from": "node_modules/semver",
+				"to": "node_modules/semver"
+			},
+			{
+				"from": "node_modules/signal-exit",
+				"to": "node_modules/signal-exit"
+			},
+			{
+				"from": "node_modules/sort-keys",
+				"to": "node_modules/sort-keys"
+			},
+			{
+				"from": "node_modules/sort-keys-length",
+				"to": "node_modules/sort-keys-length"
+			},
+			{
+				"from": "node_modules/supports-color",
+				"to": "node_modules/supports-color"
+			},
+			{
+				"from": "node_modules/universalify",
+				"to": "node_modules/universalify"
+			},
+			{
+				"from": "node_modules/unused-filename",
+				"to": "node_modules/unused-filename"
+			},
+			{
+				"from": "node_modules/with-open-file",
+				"to": "node_modules/with-open-file"
+			},
+			{
+				"from": "node_modules/wrappy",
+				"to": "node_modules/wrappy"
+			},
+			{
+				"from": "node_modules/write-file-atomic",
+				"to": "node_modules/write-file-atomic"
+			},
+			{
+				"from": "node_modules/yallist",
+				"to": "node_modules/yallist"
+			}
 		],
 		"dmg": {
 			"sign": false
